--- a/public/css/main.css
+++ b/public/css/main.css
@@ -870,7 +870,7 @@ p.secondary-text {
   font-size: .95em !important;
   padding-left: 25px;
   margin-top: 20px;
-  border-left: 8px solid #ccc;
+  border-left: 8px solid var(--color-muted-brown);
 }
 
 .page-header span.since {
