--- a/public/css/style.css
+++ b/public/css/style.css
@@ -951,7 +951,6 @@ section[data-page-uri] {
   margin-bottom: 5px;
   color: #767676;
   padding: 0 15px;
-  transition: all 0.3s ease-in-out;
 }
 
 .doc-sideNav a.active {
@@ -1073,7 +1072,7 @@ section[data-page-uri] {
 }
 
 a {
-  color: var(--orange);
+  color: var(--color-orange);
 }
 
 /* Nav Section */
@@ -2108,17 +2107,18 @@ ul.nav .btn-toggle-nav li a {
   font-weight: var(--font-weight-regular);
   font-size: 15px;
   line-height: 20px;
-  color: var(--dark--orange);
+  color: var(--color-muted-brown);
   max-width: 270px;
   padding: 2px 2px 2px 5px;
 }
 
 ul.nav .btn-toggle-nav li a:hover {
-  color: var(--dark--orange);
+  color: var(--color-orange);
+  text-decoration: none;
 }
 
 ul.nav .btn-toggle-nav li a.active {
-  background: var(--orange) !important;
+  background: var(--color-orange) !important;
   border-radius: 2px;
 }
 
@@ -2251,7 +2251,7 @@ table {
   font-family: var(--font-family-main);
   font-weight: var(--font-weight-regular);
   font-size: 14px;
-  border-radius: 8px;
+  border-radius: 2px;
   width: 200px;
   line-height: 22px;
   padding: 2px 10px;
@@ -2259,7 +2259,7 @@ table {
 
 .right-side-nav .nav-link:hover,
 .right-side-nav .nav-link.active {
-  background: var(--orange);
+  background: var(--color-orange);
 }
 
 .doc-main-body h3 {
