--- a/src/includes/header.ejs
+++ b/src/includes/header.ejs
@@ -46,6 +46,7 @@
 <link href="/css/themes/prism.css" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link href="/css/base.css?v=1103522931" rel="stylesheet">
 <link href="/css/main.css?v=1103522931" rel="stylesheet">
 <link href="/css/sidebar.css?v=1103521931" rel="stylesheet">
 <link href="/css/style.css?v=1103620931" rel="stylesheet">
