update css timestamp, update link hover style

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1769,8 +1769,8 @@ a {
 
 a:focus,
 a:hover {
-  color: #286090;
-  text-decoration: none;
+  color: var(--color-muted-blue);
+  text-decoration: underline;
 }
 
 .navbar-toggle {}
