--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -4,24 +4,22 @@
   width: 100%;
 }
 
-.logo {
+/* Navigation section start */
+.navigation__logo {
   width: 300px;
+  margin-right: auto;
 }
 
 .navigation {
   align-items: center;
-  border: 1px solid;
   display: flex;
   left: 0;
   margin-left: auto;
   margin-right: auto;
   margin-top: 73px;
+  max-width: min(1200px, 90%);
   position: absolute;
   right: 0;
-  width: 85%;
-}
-
-.navigation-button {
 }
 
 .navigation-link {
@@ -31,22 +29,73 @@
   line-height: var(--line-height-22);
 }
 
-.navigation-link--external {
-}
-
 .navigation-list {
   align-items: center;
   display: flex;
-  gap: 50px;
+  gap: 52px;
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
+.navigation-link {
+  color: var(--color-black);
+  font-size: var(--font-size-16);
+  font-weight: 500;
+  line-height: var(--line-height-19);
+  text-decoration: none;
+}
+
+.navigation-link:hover {
+  text-decoration: underline;
+  text-underline-offset: 4px;
+}
+
+.navigation-list > li > a svg {
+  width: 32px;
+  height: 100%;
+}
+
+/* #docsearch > svg {
+  width: 24px;
+  height: 24px;
+} */
+
+/* #docsearch .DocSearch-Button-Placeholder {
+  display: none;
+}
+
+#docsearch .DocSearch-Button-Keys {
+  display: none;
+}
+
+#docsearch button {
+  background: unset;
+  border-radius: unset;
+  margin: unset;
+  padding: unset;
+}
+
+#docsearch button span.DocSearch-Button-Container {
+  width: 24px;
+  height: 24px;
+}
+
+#docsearch button .DocSearch-Button-Container > svg {
+  width: 100%;
+  height: 100%;
+}
+
+#docsearch > button:hover {
+  box-shadow: unset;
+} */
+
 .navigation-list:last-child {
   gap: 30px;
-  margin-left: auto;
+  padding-left: 52px;
 }
+
+/* Navigation section end */
 
 /* Hero Section start */
 .hero {
@@ -102,6 +151,7 @@
   box-shadow: 2px 4px 10px var(--color-light-black);
   display: flex;
   padding: 12px 210px 12px 19px;
+  position: relative;
 }
 
 .hero__action-copy-command-text {
@@ -284,6 +334,7 @@
   margin-top: 80px;
   max-width: min(1200px, 90%);
   width: 100%;
+  position: relative;
 }
 
 .features__heading {
@@ -390,6 +441,20 @@
   flex: 1 1 0%;
 }
 
+.features__path {
+  position: absolute;
+  height: 100%;
+  overflow: hidden;
+  top: 206px;
+  left: 0;
+  right: 0;
+}
+
+.features__path svg {
+  height: 1471px;
+  width: 100%;
+}
+
 /* Nightwatch Feature section end */
 
 /* Nightwatch Capabilities section start */
@@ -400,6 +465,7 @@
   max-width: min(1200px, 90%);
   width: 100%;
   margin-bottom: 200px;
+  position: relative;
 }
 
 .capabilities__heading {
@@ -421,6 +487,8 @@
 
 .capabilities--single-column {
   display: block;
+  position: relative;
+  z-index: 1;
 }
 
 .capabilities--single-column .capabilities__card {
@@ -498,6 +566,8 @@
   display: flex;
   gap: 31px;
   margin-top: 30px;
+  z-index: 1;
+  position: relative;
 }
 
 .capabilities--double-column .capabilities__card {
@@ -572,6 +642,18 @@
   will-change: background, color, border, box-shadow;
 }
 
+.capabilities__path {
+  position: absolute;
+  width: 100%;
+  top: 3px;
+  overflow: hidden;
+}
+
+.capabilities__path svg {
+  width: 1053px;
+  margin: auto;
+}
+
 /* Nightwatch Capabilities section end */
 
 /* Nightwatch Performance section Start */
@@ -581,6 +663,7 @@
   max-width: min(1115px, 75%);
   width: 100%;
   margin-bottom: 160px;
+  position: relative;
 }
 
 .performance__heading {
@@ -657,6 +740,17 @@
   will-change: background, color, border, box-shadow;
 }
 
+.performance__path {
+  position: absolute;
+  width: 100%;
+  overflow: hidden;
+  padding-top: 23px;
+}
+
+.performance__path svg {
+  width: 100%;
+  margin: auto;
+}
 /* Nightwatch Performance section end */
 
 /* Nightwatch Comparison section etart */
@@ -795,6 +889,7 @@
   max-width: min(1200px, 90%);
   width: 100%;
   margin-bottom: 120px;
+  position: relative;
 }
 
 .testimonial__heading {
@@ -817,6 +912,8 @@
 .testimonial__content {
   display: flex;
   gap: 36px;
+  z-index: 1;
+  position: relative;
 }
 
 .testimonial__content-card {
@@ -875,6 +972,19 @@
   line-height: var(--line-height-24);
   color: var(--color-light-brown);
 }
+
+.testimonial__path {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: -138px;
+}
+
+.testimonial__path svg {
+  width: 100%;
+  margin: auto;
+}
+
 /* Nightwatch Testimonials section end */
 
 /* Nightwatch Integrations section start */
@@ -884,6 +994,7 @@
   margin-right: auto;
   max-width: min(1200px, 90%);
   width: 100%;
+  position: relative;
 }
 
 .integration__heading {
@@ -911,6 +1022,8 @@
   gap: 38px;
   padding: 60px;
   flex-wrap: wrap;
+  z-index: 1;
+  position: relative;
 }
 
 .integration__content-card {
@@ -947,6 +1060,16 @@
   color: var(--color-black);
 }
 
+.integration__path {
+  position: absolute;
+  width: 100%;
+  top: -120px;
+}
+
+.integration__path svg {
+  width: 100%;
+  margin: auto;
+}
 /* Nightwatch Integrations section end */
 
 /* Open Source section start */
@@ -956,6 +1079,8 @@
   margin-right: auto;
   max-width: min(1200px, 90%);
   width: 100%;
+  z-index: 1;
+  position: relative;
 }
 
 .open-source__heading {
@@ -1036,6 +1161,8 @@
   background: var(--color-white);
   border: 5px solid var(--color-light-white);
   border-radius: 20px;
+  position: relative;
+  z-index: 1;
 }
 
 .call-to-action-image > svg {
@@ -1078,6 +1205,7 @@
   box-shadow: 2px 4px 10px var(--color-light-black);
   display: flex;
   padding: 13px 156px 14px 19px;
+  position: relative;
 }
 
 .call-to-action-content-action-copy-command-text {
@@ -1151,10 +1279,11 @@
 /* Call to action section end */
 
 /* Footer section start */
-.footer {
+.footer-landing {
   background: var(--color-light-yellow);
   border-radius: 30px;
   margin: 0 20px 20px 20px;
+  position: relative;
 }
 
 .footer__wrapper {
@@ -1214,7 +1343,7 @@
   line-height: calc(28 / 16);
   display: block;
   text-decoration: none;
-  color: var(--color-dark-grey);
+  color: var(--color-black);
   opacity: 0.9;
 }
 
