--- a/src/includes/sections/guide.ejs
+++ b/src/includes/sections/guide.ejs
@@ -85,6 +85,7 @@
                                     <li><a href="/guide/writing-tests/global-test-hooks.html">Global hooks</a></li>
                                     <li><a href="/guide/using-nightwatch/accessibility-testing.html">Accessibility testing</a></li>
                                     <li><a href="/guide/writing-tests/visual-regression-testing.html">Visual regression testing</a></li>
+                                    <li><a href="/guide/writing-tests/api-testing.html">API testing</a></li>
                                     <li><a href="/guide/writing-tests/write-nodejs-unit-integration-tests.html">Unit &amp; integration testing</a></li>
                                 </ul>
                             </div>
