--- a/src/includes/sections/guide.ejs
+++ b/src/includes/sections/guide.ejs
@@ -264,6 +264,7 @@
                                                 <li><a href="/guide/reporters/use-nightwatch-allure-reporter.html">Allure reporter</a></li>
                                                 <li><a href="/guide/reporters/use-teamcity-reporter.html">Teamcity reporter</a></li>
                                                 <li><a href="/guide/reporters/create-custom-reporter.html">Add custom reporter</a></li>
+                                                <li><a href="/guide/reporters/dom-history.html">DOM history</a></li>
                                             </ul>
                                         </div>
                                     </li>
