add nightwatch inspector page

--- a/src/includes/sections/guide.ejs
+++ b/src/includes/sections/guide.ejs
@@ -87,6 +87,7 @@
                                     <li><a href="/guide/writing-tests/visual-regression-testing.html">Visual regression testing</a></li>
                                     <li><a href="/guide/writing-tests/api-testing.html">API testing</a></li>
                                     <li><a href="/guide/writing-tests/write-nodejs-unit-integration-tests.html">Unit &amp; integration testing</a></li>
+                                    <li><a href="/guide/writing-tests/nightwatch-inspector.html">Nightwatch Inspector</a></li>
                                 </ul>
                             </div>
                         </li>
