add: utils.ejs for common functions/scripts

--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -2412,17 +2412,7 @@ function activeLink(urlPart) {
     <!-- Footer section end -->
 
   </main>
-  <script>
-    function docReady(fn) {
-      // see if DOM is already available
-      if (document.readyState === 'complete' || document.readyState === 'interactive') {
-        // call on next available tick
-        setTimeout(fn, 1);
-      } else {
-        document.addEventListener('DOMContentLoaded', fn);
-      }
-    }
-  </script>
+  <%- include('utils') %>
   <script src="/js/landing/script.js"></script>
 </body>
 
