add links to new articles, remove package-lock file

--- a/src/includes/sections/guide.ejs
+++ b/src/includes/sections/guide.ejs
@@ -87,6 +87,8 @@
                                     <li><a href="/guide/writing-tests/visual-regression-testing.html">Visual regression testing</a></li>
                                     <li><a href="/guide/writing-tests/api-testing.html">API testing</a></li>
                                     <li><a href="/guide/writing-tests/write-nodejs-unit-integration-tests.html">Unit &amp; integration testing</a></li>
+                                    <li><a href="/guide/writing-tests/test-doubles.html">Test Doubles</a></li>
+                                    <li><a href="/guide/writing-tests/nightwatch-inspector.html">Nightwatch Inspector</a></li>
                                 </ul>
                             </div>
                         </li>
@@ -264,6 +266,7 @@
                                                 <li><a href="/guide/reporters/use-nightwatch-allure-reporter.html">Allure reporter</a></li>
                                                 <li><a href="/guide/reporters/use-teamcity-reporter.html">Teamcity reporter</a></li>
                                                 <li><a href="/guide/reporters/create-custom-reporter.html">Add custom reporter</a></li>
+                                                <li><a href="/guide/reporters/dom-history.html">DOM history</a></li>
                                             </ul>
                                         </div>
                                     </li>
